[package]
name = "prod-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features=["full"] }
axum = { version="0.7.7", features=["macros"] }
serde = { version = "1.0.213", features=["derive"]}
serde_with = "3.11.0"
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["fs"] }
tower-cookies = "0.10.0"
lazy-regex = "3.3.0" 
async-trait = "0.1"
strum_macros = "0.26.4"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"]}
uuid = { version="1", features=["v4", "fast-rng"]}

[dev-dependencies]
anyhow = "1.0.91"
httpc-test = "0.1.1"